src/main.css
@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");

*{
  transition: all 200ms;
}
body{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
h1{
  text-align: center;
}

